--- a/app/src/main/res/layout/activity_dailytrack.xml
+++ b/app/src/main/res/layout/activity_dailytrack.xml
@@ -24,7 +24,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/profile" />
+                android:src="@drawable/trevor" />
 
 
         </androidx.cardview.widget.CardView>
