--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/resource_new1"
+    android:background="@drawable/untitled_design__1_"
     tools:context=".homePage">
 
     <TextView
@@ -232,7 +232,7 @@
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_marginTop="70dp"
-            android:backgroundTint="#147D3A"
+            android:backgroundTint="#C0D9D1"
             android:text="Get Started"
             android:fontFamily="@font/amarante"
             android:textColor="@color/WhiteSmoke" />
@@ -264,7 +264,7 @@
             android:id="@+id/bottomNavigationView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="#147D3A"
+            android:background="#C0D9D1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
