--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,5 +2,11 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/adamina</item>
+        <item>@font/akaya_telivigala</item>
+        <item>@font/architects_daughter</item>
+        <item>@font/caveat_brush</item>
+        <item>@font/chango</item>
+        <item>@font/galindo</item>
+        <item>@font/vollkorn_sc</item>
     </array>
 </resources>
